[gd_scene load_steps=14 format=3 uid="uid://c33ulhbmdu2va"]

[ext_resource type="Script" uid="uid://ruksd3vdlj0w" path="res://Scripts/game_manager.gd" id="1_q7s2u"]
[ext_resource type="Texture2D" uid="uid://db7ondh8miai3" path="res://Images/Platformer Tileset/Icons/grass-single-platform.png" id="2_7mv47"]
[ext_resource type="Script" uid="uid://cm4x8rble0ovo" path="res://Scripts/camera_manager.gd" id="2_jw32o"]
[ext_resource type="Texture2D" uid="uid://cqcqbxhhr8vwd" path="res://Images/Background.png" id="2_wkk8o"]
[ext_resource type="Texture2D" uid="uid://blya1hlc8o777" path="res://Images/Platformer Tileset/Icons/cave-single-platform.png" id="3_lvc0p"]
[ext_resource type="Texture2D" uid="uid://gmsbn2kcx54h" path="res://Images/Platformer Tileset/Icons/desert-single-platform.png" id="4_pbw6q"]
[ext_resource type="PackedScene" uid="uid://bev3558kqokbf" path="res://Scenes/Maps.tscn" id="6_v1gob"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_00xaj"]

[sub_resource type="SystemFont" id="SystemFont_nlkcr"]

[sub_resource type="LabelSettings" id="LabelSettings_7n377"]
font = SubResource("SystemFont_nlkcr")
font_size = 150

[sub_resource type="SystemFont" id="SystemFont_xvbgb"]

[sub_resource type="LabelSettings" id="LabelSettings_0t0ht"]
font = SubResource("SystemFont_xvbgb")
font_size = 75

[sub_resource type="LabelSettings" id="LabelSettings_2jpkx"]
font_size = 25

[node name="Root" type="Node2D"]
script = ExtResource("1_q7s2u")
metadata/Player1 = true
metadata/Player2 = true
metadata/Player3 = true
metadata/Player4 = true
metadata/Player1Score = 0
metadata/Player2Score = 0
metadata/Player3Score = 0
metadata/Player4Score = 0
metadata/PlayerCount = 2
metadata/PointsToWin = 1
metadata/StartingMap = &"res://Scenes/Test/Test.tscn"
metadata/LoopMap = false

[node name="TopLeft" type="Marker2D" parent="."]
position = Vector2(0, 952)

[node name="BottomRight" type="Marker2D" parent="."]
position = Vector2(528, 1240)

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("corner1", "corner2")]
script = ExtResource("2_jw32o")
corner1 = NodePath("../TopLeft")
corner2 = NodePath("../BottomRight")

[node name="Maps" parent="." instance=ExtResource("6_v1gob")]
position = Vector2(0, 1240)

[node name="Menu" type="CanvasLayer" parent="."]

[node name="LevelSelect" type="OptionButton" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -261.0
offset_top = -49.0
offset_right = -125.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(68, 15)
selected = 0
item_count = 16
popup/item_0/text = "GrassLand1"
popup/item_0/icon = ExtResource("2_7mv47")
popup/item_0/id = 0
popup/item_1/text = "GrassLand2"
popup/item_1/icon = ExtResource("2_7mv47")
popup/item_1/id = 1
popup/item_2/text = "GrassLand3"
popup/item_2/icon = ExtResource("2_7mv47")
popup/item_2/id = 2
popup/item_3/text = "GrassLand4"
popup/item_3/icon = ExtResource("2_7mv47")
popup/item_3/id = 3
popup/item_4/text = "GrassLand5"
popup/item_4/icon = ExtResource("2_7mv47")
popup/item_4/id = 4
popup/item_5/text = "Cave1"
popup/item_5/icon = ExtResource("3_lvc0p")
popup/item_5/id = 5
popup/item_6/text = "Cave2"
popup/item_6/icon = ExtResource("3_lvc0p")
popup/item_6/id = 6
popup/item_7/text = "Cave3"
popup/item_7/icon = ExtResource("3_lvc0p")
popup/item_7/id = 7
popup/item_8/text = "Cave4"
popup/item_8/icon = ExtResource("3_lvc0p")
popup/item_8/id = 8
popup/item_9/text = "Cave5"
popup/item_9/icon = ExtResource("3_lvc0p")
popup/item_9/id = 9
popup/item_10/text = "Desert1"
popup/item_10/icon = ExtResource("4_pbw6q")
popup/item_10/id = 10
popup/item_11/text = "Desert2"
popup/item_11/icon = ExtResource("4_pbw6q")
popup/item_11/id = 11
popup/item_12/text = "Desert3"
popup/item_12/icon = ExtResource("4_pbw6q")
popup/item_12/id = 12
popup/item_13/text = "Desert4"
popup/item_13/icon = ExtResource("4_pbw6q")
popup/item_13/id = 13
popup/item_14/text = "Desert5"
popup/item_14/icon = ExtResource("4_pbw6q")
popup/item_14/id = 14
popup/item_15/text = "Teszt"
popup/item_15/id = 15

[node name="LoopMap" type="CheckButton" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -97.0
offset_top = -102.0
offset_right = 97.0
offset_bottom = -70.9998
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(97, 15.5)
text = "Loop Selected Map"

[node name="PlayerCount" type="OptionButton" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = 26.0
offset_right = 57.5
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(57, 15)
selected = 0
item_count = 3
popup/item_0/text = "2 players"
popup/item_0/id = 0
popup/item_1/text = "3 players"
popup/item_1/id = 1
popup/item_2/text = "4 players"
popup/item_2/id = 2

[node name="RoundsToWin" type="OptionButton" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 139.0
offset_top = -49.0
offset_right = 262.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(61, 15)
selected = 0
item_count = 10
popup/item_0/text = "1 round"
popup/item_0/id = 0
popup/item_1/text = "2 rounds"
popup/item_1/id = 1
popup/item_2/text = "3 rounds"
popup/item_2/id = 2
popup/item_3/text = "4 rounds"
popup/item_3/id = 3
popup/item_4/text = "5 rounds"
popup/item_4/id = 4
popup/item_5/text = "6 rounds"
popup/item_5/id = 5
popup/item_6/text = "7 rounds"
popup/item_6/id = 6
popup/item_7/text = "8 rounds"
popup/item_7/id = 7
popup/item_8/text = "9 rounds"
popup/item_8/id = 8
popup/item_9/text = "10 rounds"
popup/item_9/id = 9

[node name="Start" type="Button" parent="Menu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = 166.0
offset_right = 68.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(66, 20)
text = "Start Game"
icon = SubResource("CompressedTexture2D_00xaj")

[node name="WinScreen" type="CanvasLayer" parent="."]

[node name="TextureRect" type="TextureRect" parent="WinScreen"]
visible = false
modulate = Color(1, 1, 1, 0.686275)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wkk8o")

[node name="RoundLabel" type="Label" parent="WinScreen"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -215.0
offset_top = -224.0
offset_right = 215.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
text = "Round Over"
label_settings = SubResource("LabelSettings_7n377")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerLabel" type="Label" parent="WinScreen"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -238.0
offset_top = -62.0
offset_right = 238.0
offset_bottom = 62.0
grow_horizontal = 2
grow_vertical = 2
text = "Player X Won"
label_settings = SubResource("LabelSettings_0t0ht")
horizontal_alignment = 1
vertical_alignment = 1

[node name="WinLabel" type="Label" parent="WinScreen"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 76.0
offset_right = 100.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
text = "Player 1: 0 Win
Player 2: 0 Win
Player 3: 0 Win
Player 4: 0 Win"
label_settings = SubResource("LabelSettings_2jpkx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartTimer" type="Timer" parent="."]

[node name="DeathTimer" type="Timer" parent="."]

[connection signal="player_death" from="." to="." method="_on_player_death"]
[connection signal="item_selected" from="Menu/LevelSelect" to="." method="_on_level_select_item_selected"]
[connection signal="toggled" from="Menu/LoopMap" to="." method="_on_loop_map_toggled"]
[connection signal="item_selected" from="Menu/PlayerCount" to="." method="_on_player_count_item_selected"]
[connection signal="item_selected" from="Menu/RoundsToWin" to="." method="_on_rounds_to_win_item_selected"]
[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
